--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* /////Box Sizes///// */
 div {
   margin: 0;
@@ -8,6 +9,7 @@ div {
   display: flex;
   flex-flow: row wrap;
   font-family: arial;
+  max-width: 800px;
   /*border: 5px dotted black;*/
 }
 .nav {
@@ -30,7 +32,6 @@ div {
   margin-right: 15px;
   background: #4DD7FA;
   padding: 0 0 0 0;
-  clear: both;
 }
 .main {
   border: 3px solid black;
@@ -132,3 +133,27 @@ td input {
   width: 135px;
   hight: 20px;
 }
+
+@media screen and (max-width: 480px) {
+  .entire {
+    width: 100%;  
+  }
+  .nav {
+    width: 100%;
+    min-width: 100%;
+    display: block;
+  }
+  .filter {
+    width: 100%;
+    min-width: 100%;
+    float: left;
+  }
+  .main {
+    width: 100%;
+    min-width: 100%;
+    float: left;
+    clear: both;
+  }
+}
+
+/* and (orientation: portrait)*/
