--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ div {
   border: 3px solid black;
   height: 55px;
   width: 100%; 
-  margin: 15px 0;
+  margin: 15px 15px 15px 0;
   background: #FFB4B0;
   min-width: 165px;
 }
@@ -39,6 +39,7 @@ div {
   flex: 3;
   min-width: 165px;
   background: #FEFAC0;
+  margin-right: 15px;
   display: flex;
   flex-direction: column;
   clear: both;
@@ -146,6 +147,7 @@ td input {
   .filter {
     width: 100%;
     min-width: 100%;
+    margin-bottom: 15px;
     float: left;
   }
   .main {
@@ -153,6 +155,9 @@ td input {
     min-width: 100%;
     float: left;
     clear: both;
+  }
+  #selectbox , #selectbox2 , input[type=range] {
+    width: 80%;
   }
 }
 
