--- a/style.css
+++ b/style.css
@@ -66,9 +66,10 @@ div {
   color: #785616;
   padding: 0 0 0 30px;
   font-weight: 500;
-  margin-top: 25px;
-  margin-bottom: 0px;
+  margin: 25px auto 0 auto;
   padding-bottom: 0;
+  font-size: 1.3em;
+  text-align: center;
 }
 .main li {
   display: inline;
