--- a/style.css
+++ b/style.css
@@ -68,12 +68,15 @@ div {
   font-weight: 500;
   margin: 25px auto 0 auto;
   padding-bottom: 0;
-  font-size: 1.3em;
+  font-size: 1.2em;
   text-align: center;
 }
 .main li {
   display: inline;
   margin: 0px 25px 0px -10px;
+}
+.info {
+  margin: 10px;
 }
 .borderlr2 {
   border-left: 1.5px solid black;
