--- a/style.css
+++ b/style.css
@@ -80,16 +80,16 @@ div {
 .main ul {
   text-align: center;
 }
-.main section:first-child {
+.main div:first-child {
   font-weight: bold;
 }
-.main section:first-child h2 {
+.main div:first-child h2 {
   font-weight: 600;
 }
-.main section:nth-child(2n+0) {
+.main div:nth-child(2n+0) {
   background: SeaShell;
 }
-.main section:nth-child(2n+1) {
+.main div:nth-child(2n+1) {
   background: MintCream;
 }
 .info {
